# photo-copier

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
photo-copier/: main.py
photo_copier/: __main__.py
