# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-copier"
version = "1.0.2"
description = "Select an copy your photos"
readme = "README.md"
authors = [{ name = "n4n5", email = "its.just.n4n5@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["photo"]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/Its-Just-Nans/photo-copier"
"Bug Tracker" = "https://github.com/Its-Just-Nans/photo-copier/issues"
